--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    <link rel="stylesheet" href="./style.css">
+
+    <style>
+      .intcss {
+        background-color:green;
+        color:white;
+
+
+      }
+    </style>
+
   </head>
   <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <div class="extcss">Style me via the external method!</div>
+    <p class ="intcss">I would like to be styled with the internal method, please.</p>
+    <button style="background-color:rgb(255, 102, 0);">Inline Method</button>
   </body>
 </html>
